force-app/main/default/objects/leaseworks__Lease__c/leaseworks__Lease__c.object-meta.xml
<CustomObject>
    <description>Central table for Lease Agreement/contract headers, storing essential details like start/end dates, current status, and associated asset reference.</description>
    <label>Contract</label>
    <nameField>
        <label>Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contracts</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>