force-app/main/default/objects/leaseworks__Lease__c/fields/Asset_Id_external_Local__c.field-meta.xml
<CustomField>
    <fullName>Asset_Id_external_Local__c</fullName>
    <description>This was added at the time of Implementation</description>
    <label>Asset Id (external)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>