force-app/main/default/objects/leaseworks__Lease__c/fields/CAP_Total_Available_Balance_Cash__c.field-meta.xml
<CustomField>
    <fullName>CAP_Total_Available_Balance_Cash__c</fullName>
    <description>Sum of all active supplemental rent available balances</description>
    <inlineHelpText>Sum of all active supplemental rent available balances</inlineHelpText>
    <label>Total Available Balance (Cash)</label>
    <summarizedField>leaseworks__Assembly_MR_Rate__c.leaseworks__Transactions_Total_Cash__c</summarizedField>
    <summaryFilterItems>
        <field>leaseworks__Assembly_MR_Rate__c.leaseworks__Inactive__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>leaseworks__Assembly_MR_Rate__c.leaseworks__Lease__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>