force-app/main/default/objects/leaseworks__Lease__c/fields/Claim_Notification_Window__c.field-meta.xml
<CustomField>
    <fullName>Claim_Notification_Window__c</fullName>
    <label>Claim Notification Window</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Months</fullName>
            </value>
            <value>
                <fullName>6 Months</fullName>
            </value>
            <value>
                <fullName>9 Months</fullName>
            </value>
            <value>
                <fullName>12 Months</fullName>
            </value>
            <value>
                <fullName>None specified</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>