force-app/main/default/objects/leaseworks__Lease__c/fields/Consignment_Location__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Location__c</fullName>
    <label>Consignment Location</label>
    <length>255</length>
    <type>Text</type>
</CustomField>