force-app/main/default/objects/leaseworks__Lease__c/fields/Consignment_Name__c.field-meta.xml
<CustomField>
    <fullName>Consignment_Name__c</fullName>
    <inlineHelpText>Local field. Free text up to 120 characters.</inlineHelpText>
    <label>Consignment Name</label>
    <length>120</length>
    <type>Text</type>
</CustomField>