force-app/main/default/objects/leaseworks__Lease__c/fields/Early_Redelivery_Local__c.field-meta.xml
<CustomField>
    <fullName>Early_Redelivery_Local__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This was added at the time of Implementation</description>
    <label>Early Redelivery</label>
    <type>Checkbox</type>
</CustomField>