force-app/main/default/objects/leaseworks__Lease__c/fields/Engine_1_ESN_Type_local__c.field-meta.xml
<CustomField>
    <fullName>Engine_1_ESN_Type_local__c</fullName>
    <formula>Engine_1_ESN_local__c &amp; 
IF(
    ISBLANK(Engine_1_Type_local__c), 
    &apos;&apos;, 
    &quot; (&quot; &amp; Engine_1_Type_local__c &amp; &quot;)&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Engine 1 ESN &amp; Type</label>
    <type>Text</type>
</CustomField>