force-app/main/default/objects/leaseworks__Lease__c/fields/Engine_2_ESN_Formula_local__c.field-meta.xml
<CustomField>
    <fullName>Engine_2_ESN_Formula_local__c</fullName>
    <formula>Engine_2_ESN_local__c</formula>
    <label>Engine 2 ESN</label>
    <type>Text</type>
</CustomField>