force-app/main/default/objects/leaseworks__Lease__c/fields/Engine_2_Type_local__c.field-meta.xml
<CustomField>
    <fullName>Engine_2_Type_local__c</fullName>
    <label>Engine 2 Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>