force-app/main/default/objects/leaseworks__Lease__c/fields/Grace_Period__c.field-meta.xml
<CustomField>
    <fullName>Grace_Period__c</fullName>
    <inlineHelpText>Grace period after expiry date</inlineHelpText>
    <label>Grace Period</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>