force-app/main/default/objects/leaseworks__Lease__c/fields/IDERA__c.field-meta.xml
<CustomField>
    <fullName>IDERA__c</fullName>
    <label>IDERA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>