force-app/main/default/objects/leaseworks__Lease__c/fields/IDERA_Location_of_originals__c.field-meta.xml
<CustomField>
    <fullName>IDERA_Location_of_originals__c</fullName>
    <label>IDERA Location of originals</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Dublin</fullName>
            </value>
            <value>
                <fullName>Miami</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>