force-app/main/default/objects/leaseworks__Lease__c/fields/IDERA_Originals_Received__c.field-meta.xml
<CustomField>
    <fullName>IDERA_Originals_Received__c</fullName>
    <label>IDERA Originals Received</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>