force-app/main/default/objects/leaseworks__Lease__c/fields/Include_In_Bulk_Interest_Calculation__c.field-meta.xml
<CustomField>
    <fullName>Include_In_Bulk_Interest_Calculation__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Check this box to include all overdue invoices from this lease in the default interest calculation process. Uncheck to exclude them.</inlineHelpText>
    <label>Include In Bulk Interest Calculation</label>
    <type>Checkbox</type>
</CustomField>