force-app/main/default/objects/leaseworks__Lease__c/fields/Internal_Comments__c.field-meta.xml
<CustomField>
    <fullName>Internal_Comments__c</fullName>
    <description>Custom field for sale and consignment agreements</description>
    <label>Internal Comments</label>
    <length>3000</length>
    <type>LongTextArea</type>
</CustomField>