force-app/main/default/objects/leaseworks__Lease__c/fields/Latest_Insurance_Red_Schedule_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Insurance_Red_Schedule_End_Date__c</fullName>
    <description>Latest Insurance Reduction Schedule End Date</description>
    <label>Latest Insurance Red Schedule End Date</label>
    <summarizedField>leaseworks__Insurance_Reduction_Schedule__c.leaseworks__End_Date__c</summarizedField>
    <summaryForeignKey>leaseworks__Insurance_Reduction_Schedule__c.leaseworks__Lease__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>