force-app/main/default/objects/leaseworks__Lease__c/fields/Lease_Terminated_Sold_Cancelled_Date__c.field-meta.xml
<CustomField>
    <fullName>Lease_Terminated_Sold_Cancelled_Date__c</fullName>
    <description>Added to avoid the trigger that updates lease status to Redelivered.</description>
    <inlineHelpText>Use this field to enter a Terminated/Sold/Cancelled Date (separate from Redelivery Date)</inlineHelpText>
    <label>Lease Terminated/Sold/Cancelled Date</label>
    <type>Date</type>
</CustomField>