force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Accounting_Setup_P__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Accounting_Setup_P__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Accounting Profile</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Parent_Accounting_Setup__c.leaseworks__Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Parent_Accounting_Setup__c</referenceTo>
    <relationshipLabel>Leases</relationshipLabel>
    <relationshipName>Leases</relationshipName>
    <type>Lookup</type>
</CustomField>