force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Active_Override__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Active_Override__c</fullName>
    <description>Use this field to override Active? status of the lease with a user entered value</description>
    <inlineHelpText>Use this field to override Active? status of the lease with a user entered value</inlineHelpText>
    <label>Active? Override</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Default</fullName>
                <default>true</default>
                <label>Default</label>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>