force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Actual_FH_FC_Created_Until__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Actual_FH_FC_Created_Until__c</fullName>
    <label>Z_Unused_2306 Actual FH/FC Created Until</label>
    <type>Date</type>
</CustomField>