force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Adjustment_Amount__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Adjustment_Amount__c</fullName>
    <description>Enter adjustment flat amount (positive/negative) that is applicable on the invoiced amount. Note: Flat adjustment is not supported on non USD invoices.</description>
    <inlineHelpText>Enter adjustment flat amount (positive/negative) that is applicable on the invoiced amount. Note: Flat adjustment is not supported on non USD invoices.</inlineHelpText>
    <label>Adjustment Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>