force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Adjustment_Applicable_On__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Adjustment_Applicable_On__c</fullName>
    <description>Select the invoice types for which adjustment is applicable.</description>
    <inlineHelpText>Select the invoice types for which adjustment is applicable.</inlineHelpText>
    <label>Adjustment Applicable On</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Rent</fullName>
            </value>
            <value>
                <fullName>Aircraft MR</fullName>
            </value>
            <value>
                <fullName>Interest</fullName>
            </value>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Loan</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>