force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Age_at_Lease_End__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Age_at_Lease_End__c</fullName>
    <formula>(leaseworks__Lease_End_Date_New__c - leaseworks__Aircraft__r.leaseworks__Date_of_Manufacture__c )/365</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age at Contract End</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>