force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Assumed_Engine_3_Hrs__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assumed_Engine_3_Hrs__c</fullName>
    <label>Z_Unused_2306 Assumed Monthly Eng 3 Hrs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>