force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Assumed_FH__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assumed_FH__c</fullName>
    <label>Z_Unused_2306 Assumed Month Airframe FH</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>