force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Assumed_Landing_Gear_Nose_Cycle__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Assumed_Landing_Gear_Nose_Cycle__c</fullName>
    <label>Z_Unused_2306 Assumed Month LG Nose Cyc</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>