force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Average_FC_For_Prospective_Period__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Average_FC_For_Prospective_Period__c</fullName>
    <label>Z_Unused_2306 Avg AFR FC Prospective Prd</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>