force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Average_Landing_Gear_Nose_Cycle__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Average_Landing_Gear_Nose_Cycle__c</fullName>
    <description>Average Landing Gear Nose Cycle For Prospective Period</description>
    <inlineHelpText>Average Landing Gear Nose Cycle For Prospective Period</inlineHelpText>
    <label>Z_Unused_2306 Average LG Nose Cycle</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>