force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Bank_Account_For_Others__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bank_Account_For_Others__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only approved, active bank accounts that are not blocked for AR usage can be selected.</inlineHelpText>
    <label>Lessor Bank for Other</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>leaseworks__Bank_Account__c.leaseworks__Block_AR_Usage__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>leaseworks__Bank_Account__c.leaseworks__Inactive__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>leaseworks__Bank_Account__c.leaseworks__Approval_Status__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>leaseworks__Bank_Account__c</referenceTo>
    <relationshipLabel>Leases (Lessor Bank Account for Other Invoices)</relationshipLabel>
    <relationshipName>Leases3</relationshipName>
    <type>Lookup</type>
</CustomField>