force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Bargain_Purchase_Price_Below_FMV__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bargain_Purchase_Price_Below_FMV__c</fullName>
    <label>Z_Unused_2103 Bargain Purchase Price</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>