force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Base_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Base_Rent__c</fullName>
    <description>Displays the base rent applicable for today from the Primary Rent Schedule, shown in USD. If no Rent Schedule is marked as Primary, this field will be blank or previous value will be retained for reporting purposes.
        [LOAD:No]
        [JUSTIFICATION:Calculates value from trigger on related Rent Schedule records]
        [REPLACEMENT OBJECT API: NA]
        [REPLACEMENT FIELD API: NA]
        [COMMENTS: NA]</description>
    <inlineHelpText>Displays the base rent applicable for today from the Primary Rent Schedule, shown in USD. If no Rent Schedule is marked as Primary, this field will be blank or previous value will be retained for reporting purposes.</inlineHelpText>
    <label>Base Rent ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>