force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__BaseMRR_Airframe_Heavy_Maint_1__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__BaseMRR_Airframe_Heavy_Maint_1__c</fullName>
    <label>Z_Unused Base MRR HM 1/Month</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>