force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Benchmark_Term_Mos__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Benchmark_Term_Mos__c</fullName>
    <description>Benchmark term that would be expected for this lease either now or at renewal</description>
    <inlineHelpText>Desired rent used as a guide by commercial teams. Once set, any marketing campaign including this asset will use this as the &quot;Benchmark&quot; term while re-marketing.</inlineHelpText>
    <label>Benchmark Term (Months)</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>