force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Bill_To_Party__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Bill_To_Party__c</fullName>
    <description>Select the party to send invoices to. Based on the selection, contact details will populate on the Bulk Invoicing screen from either the &#39;Lessee&#39; or &#39;Invoiced Party&#39;. For invoice parties, please ensure the record exists on the parties related list on the contract.</description>
    <inlineHelpText>Select the party to send invoices to. Based on the selection, contact details will populate on the Bulk Invoicing screen from either the &#39;Lessee&#39; or &#39;Invoiced Party&#39;. For invoice parties, please ensure the record exists on the parties related list on the contract.</inlineHelpText>
    <label>Bill To Party</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Lessee</fullName>
            </value>
            <value>
                <fullName>Invoiced Party</fullName>
                <default>true</default>
                <label>Invoiced Party</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>