force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Billing_Currency__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Billing_Currency__c</fullName>
    <description>Select the currency applicable to invoices. Billing currency is the currency in which invoices are issued to Lessee. It represents the currency agreed upon for the contract.</description>
    <inlineHelpText>Select the currency applicable to invoices. Billing currency is the currency in which invoices are issued to Lessee. For multi-currency leases, please leave this selection bank.</inlineHelpText>
    <label>Billing Currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>leaseworks__Currency_GP</valueSetName>
    </valueSet>
</CustomField>