force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__C_Check_At_Lease_Expiry__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__C_Check_At_Lease_Expiry__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Soruce: Volito. Asana: Lease Summary</description>
    <label>Z_Unused_2306 C Check At Lease Expiry?</label>
    <type>Checkbox</type>
</CustomField>