force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Choice_of_Forum__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Choice_of_Forum__c</fullName>
    <inlineHelpText>Choice of Forum per the lease agreement (eg. Exclusive, Non-Exclusive Jurisdiction and for which party)</inlineHelpText>
    <label>Z_unused_2312 Choice Of Forum</label>
    <length>100</length>
    <type>Text</type>
</CustomField>