force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Choice_of_Forum_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Choice_of_Forum_New__c</fullName>
    <inlineHelpText>Choice of Forum per the lease agreement (eg. Exclusive, Non-Exclusive Jurisdiction and for which party)</inlineHelpText>
    <label>Choice of Forum</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes - Exclusive to Lessee and Lessor</fullName>
            </value>
            <value>
                <fullName>Yes - Exclusive to Lessee but not to Lessor</fullName>
            </value>
            <value>
                <fullName>Yes - Non Exclusive to neither Lessee nor Lessor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>