force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Combustor_Allocation__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Combustor_Allocation__c</fullName>
    <description>MR allocation percentage for Combustor</description>
    <inlineHelpText>MR allocation percentage for Combustor</inlineHelpText>
    <label>Z_Unused_2306 Combustor Allocation</label>
    <precision>4</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>