force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Company_Code__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Company_Code__c</fullName>
    <formula>leaseworks__Portfolios__r.leaseworks__Company_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Code</label>
    <type>Text</type>
</CustomField>