force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Compound_Interest__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Compound_Interest__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates if the late payment interest calculation is compounded</inlineHelpText>
    <label>Compound Interest?</label>
    <type>Checkbox</type>
</CustomField>