force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Compound_Interest_Monthly__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Compound_Interest_Monthly__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Compound Interest Monthly?</label>
    <type>Checkbox</type>
</CustomField>