force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Contractual_FH_FC_Ratio__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Contractual_FH_FC_Ratio__c</fullName>
    <description>This FH:FC Ratio will be used at the end of the Reconciliation period to compare with the actual and find the difference</description>
    <inlineHelpText>This FH:FC Ratio will be used at the end of the Reconciliation period to compare with the actual and find the difference.</inlineHelpText>
    <label>Reconciliation FH:FC (Contractual)</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>