force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Correction_For_Non_business_Days__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Correction_For_Non_business_Days__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Soruce: Volito. Asana: Lease Summary</description>
    <inlineHelpText>Should the Payment Due Date get adjusted for invoices that are due on a non-business day?</inlineHelpText>
    <label>Z_Unused_2401 CorrectionNon-businessDays</label>
    <type>Checkbox</type>
</CustomField>