force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Current_Rent__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Rent__c</fullName>
    <formula>0.0</formula>
    <inlineHelpText>Shows the rent applicable for today. If no rent is set, today will be blank. If the lease is Inactive the last rent will be populated to improve your reports.</inlineHelpText>
    <label>Z_Unused_2405 Current Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>