force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Current_Rent_New__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Rent_New__c</fullName>
    <description>Formula field that copies the value from the hidden field _Current Rent.</description>
    <formula>leaseworks__Rent__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field displays the rent applicable for today. If no rent schedule is set or if it&apos;s deleted, the previous value will be retained for better reporting.</inlineHelpText>
    <label>Current Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>