force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Current_Rent_Number__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Current_Rent_Number__c</fullName>
    <description>Displays the rent applicable (Base Rent/ Stepped Rent) for today from the Primary Rent Schedule, shown in USD.  If no Rent Schedule is marked as Primary, this field will be blank or previous value will be retained for reporting purposes. Used when multi-currency is enabled.
        [LOAD:No]
        [JUSTIFICATION:This is a formula field that mirrors Current_Rent_New__c for multi-currency support]
        [REPLACEMENT OBJECT API: NA]
        [REPLACEMENT FIELD API: NA]
        [COMMENTS: NA]</description>
    <formula>leaseworks__Current_Rent_New__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the rent applicable (Base Rent/ Stepped Rent) for today from the Primary Rent Schedule, shown in USD.  If no Rent Schedule is marked as Primary, this field will be blank or previous value will be retained for reporting purposes. Used when multi-currency is enabled.</inlineHelpText>
    <label>Current Rent (Number)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>