force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Daily_Income_Calculation_Method__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Daily_Income_Calculation_Method__c</fullName>
    <label>Z_Unused_2109_Daily Income Calculation</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Daily Straight Line</fullName>
                <default>true</default>
                <label>Daily Straight Line</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>