force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Data_Verified_For_Accuracy__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Data_Verified_For_Accuracy__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Data Verified For Accuracy</label>
    <type>Checkbox</type>
</CustomField>