force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Date_of_Master_Agreement__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Date_of_Master_Agreement__c</fullName>
    <label>Date of Master Agreement</label>
    <type>Date</type>
</CustomField>