force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Delivery_Date__c</fullName>
    <description>Enter the date when the asset was actually delivered.</description>
    <inlineHelpText>Enter the date when the asset was actually delivered.</inlineHelpText>
    <label>Delivery Date</label>
    <type>Date</type>
</CustomField>