force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Department_Level__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Department_Level__c</fullName>
    <formula>leaseworks__Portfolios__r.leaseworks__Department_Level__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Department Level</label>
    <type>Text</type>
</CustomField>