force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Deposit_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deposit_Received_Date__c</fullName>
    <label>Z_unused_2009 Deposit Received Date</label>
    <type>Date</type>
</CustomField>