force-app/main/default/objects/leaseworks__Lease__c/fields/leaseworks__Deposit_Return_Date__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Deposit_Return_Date__c</fullName>
    <inlineHelpText>This is the date that security deposits are expected to be returned (set equal to the lease end date).</inlineHelpText>
    <label>Z_Unused_2009 Deposit Return Date</label>
    <type>Date</type>
</CustomField>